Completados DTO's, controladores, clases de servicio y repositorios